<resources>
    <string name="app_name">lecture9_register_users</string>
    <string name="welcome_to_our_data_service">"     Welcome to our data service"</string>
    <string name="username"> Username</string>
    <string name="lastname"> Lastname</string>
    <string name="name">Name</string>
    <string name="age"> Age</string>
    <string name="address">  Address</string>
    <string name="set_address">      Set Address</string>
    <string name="confirm">Confirm</string>
    <string name="your_information">"    Your Information"</string>
    <string name="choose">Choose</string>
    <string name="sign_up">Sign Up</string>
    <string name="update_profile">Update Profile</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="user_profile">user_profile</string>
    <string name="loading">"          Loading ..."</string>
</resources>
